--- a/src/App.css
+++ b/src/App.css
@@ -31,5 +31,58 @@ input {
 main {
   min-height: 30rem;
 }
+* Override Bootstrap */
+@media (min-width: 1200px),
+  (min-width: 992px),
+  (min-width: 768px),
+  (min-width: 576px) {
+  .container {
+    max-width: none;
+  }
+}
+.container {
+  /* max-width: 1200px; */
+  margin: 0 auto;
+}
+a {
+  color: #eb892e;
+}
+a:hover {
+  color: #f1e3d5;
+}
+
+.card {
+  position: relative;
+  display: inline-block;
+  max-width: 400px;
+  margin: 1rem 2rem;
+  padding: 2rem;
+  padding-top: 0;
+  padding-right: 0;
+}
+.card-title,
+h5 {
+  margin-top: 2rem;
+  font-weight: 800;
+  font-size: 25px;
+}
+
+.card-text {
+  color: #1f1818;
+  max-width: 500px;
+  margin-top: 2rem;
+}
+.card-img-top {
+  position: relative;
+  border-radius: 50%;
+  max-width: 250px;
+  height: 250px;
+  top: 2.5rem;
+  right: 1rem;
+}
+
+
+
+
 
 
