--- a/src/scrollContainer/scrollContainer.css
+++ b/src/scrollContainer/scrollContainer.css
@@ -14,8 +14,9 @@
 }
 
 .horizontal-scroll {
-  width: 100vh;
-  height: 40vw;
+  margin-left: 30vw;
+  width: 40vh; /* height */
+  height: 130vw; /* width */
   overflow-y: auto;
   overflow-x: hidden;
   padding: 30px;
@@ -29,11 +30,10 @@
 .horizontal-scroll__block {
   width: calc(100vh - 60px);
   height: calc(100vh - 60px);
-  background: #fdfffc;
   position: relative;
 }
 .horizontal-scroll__block:not(:first-child) {
-  margin-top: 30px;
+  margin-top: 30px; /* left margin*/
 }
 .horizontal-scroll__block .background {
   position: absolute;
@@ -45,34 +45,37 @@
   opacity: 0.8;
   background-blend-mode: luminosity;
 }
-.horizontal-scroll__block .letter {
+.horizontal-scroll__block .card-text {
   display: inline-block;
   position: absolute;
-  top: 50%;
+  top: 80%;
   right: auto;
   bottom: auto;
-  left: 50%;
+  left: 70%;
   transform: translate3d(-50%, -50%, 0);
   font-weight: normal;
-  font-size: 12em;
+  font-size: 3em;
   font-family: "Playfair Display", serif;
-  color: white;
+  /* color: white; */ /* inline-styling each-color separetely*/
 }
 .horizontal-scroll__block--purple .background {
-  background-color: #52489c;
+  /* background-color: #52489c; */
+  background-color: #ff9a04;
 }
 .horizontal-scroll__block--yellow .background {
-  background-color: #ecc30b;
+  /* background-color: #ecc30b; */
+  background-color: #285adb;
 }
 .horizontal-scroll__block--orange .background {
-  background-color: #f37748;
+  background-color: #1bc100;
 }
 .horizontal-scroll__block--blue .background {
-  background-color: #4d9de0;
+  background-color: #93dded;
 }
 .horizontal-scroll__block--green .background {
-  background-color: #00bd9d;
+  /* not in use */
+  /* background-color: #00bd9d; */
 }
 .horizontal-scroll__block--pink .background {
-  background-color: #fb9f89;
+  /* background-color: #fb9f89; */
 }
