--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -7,6 +7,10 @@
     max-width: none;
   }
 }
+.weatherCard card{
+  flex: 1;
+  background-Color: "#93ACED";
+}
 .container {
   /* max-width: 1200px; */
   margin: 0 auto;
@@ -26,6 +30,7 @@ a:hover {
   padding: 2rem;
   padding-top: 0;
   padding-right: 0;
+
 }
 .card-title,
 h5 {
