conflicts after merging resolved

--- a/src/Main/Home/scrollContainer/scrollContainer.css
+++ b/src/Main/Home/scrollContainer/scrollContainer.css
@@ -62,7 +62,7 @@
     font-size: 3.5rem;
     /* color: white; */ /* inline-styling each-color separetely*/
   }
-
+}
 
 /* --- MOBILE --- */
 /* one or more available input mechanism(s) cannot hover or there are no pointing input mechanisms */
