--- a/src/Main/LostAndFound/LostFound.css
+++ b/src/Main/LostAndFound/LostFound.css
@@ -1,27 +1,25 @@
-.lost-list {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 1rem;
-    padding: 1rem;
-  }
-  
-  .lost-card {
-    background: #f4f4f4;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #333;
-    padding: 1rem;
-  }
+.foundList .lostList {
+  display: grid;
+  align-items: flex-start;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
+  list-style: none;
+}
 
-  .found-list {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 1rem;
-    padding: 1rem;
-  }
+.lost-card .found-card {
+  background: #f4f4f4;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #787878;
+  border: 10px solid #f4f4f4;
+  position: relative;
+}
 
-  .found-card {
-    background: #f4f4f4;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #333;
-    padding: 1rem;
-  }
+.lost-card img .found-card img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 150px;
+}
+
+.lost-card h2 {
+  padding: 0.1rem 1rem;
+}
