singl day div display progrs 1

--- a/src/Main/Laundry/frontpage.css
+++ b/src/Main/Laundry/frontpage.css
@@ -2,10 +2,11 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: papayawhip;
+#laundry-frontpage-container {
+  background-color: powderblue;
 }
 form {
+  margin-top: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,10 +16,15 @@ form {
 input {
   border: 5px solid paleturquoise;
   border-radius: 5px;
-  margin: 10px;
+  margin: 30px;
+  width: 50vw;
 }
 
 button {
-  border: paleturquoise;
-  block-size: 200%;
+  border: none;
+  border-radius: 5px;
+  font-size: 150%;
+  padding: 10px;
+  margin-bottom: 50px;
+  font-style: oblique;
 }
