--- a/src/Main/Event/customEventCss.css
+++ b/src/Main/Event/customEventCss.css
@@ -19,7 +19,7 @@
   justify-content: flex-end;
   height: 100%;
   margin-right: 30px;
-  font-size: 2.2vw;
+  font-size: 2.2vw; /*responsive font-size*/
   overflow-y: auto;
 }
 
