--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ html {
 
 body,
 input {
-  font-family: var(--font);
+  font-family: var(--font) !important;
   color: var(--text-color);
   font-size: 20px;
 }
