--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,19 @@ main {
   min-height: 30rem;
   padding-top: 7rem;
 }
+
+.MuiInput-root {
+  width: 40rem !important;
+}
+
+@media (max-width: 900px) {
+  .MuiInput-root {
+    width: 30rem !important;
+  }
+}
+
+@media (max-width: 550px) {
+  .MuiInput-root {
+    width: 15rem !important;
+  }
+}
