--- a/src/Main/Event/customEventCss.css
+++ b/src/Main/Event/customEventCss.css
@@ -68,13 +68,21 @@
   margin-top: 10% !important;
 }
 
+.card-text {
+  color: black;
+}
+@media (max-width: 800px) {
+  .eventListCard {
+    font-size: 1.5vw;
+  }
+}
 @media (max-width: 500px) {
   .orange-card {
     height: 40%;
     margin-top: 10vh;
   }
   .eventListCard {
-    font-size: 4vw;
+    font-size: 3vw;
   }
   .eventListCard img {
     height: 150px;
@@ -85,6 +93,9 @@
 @media (max-width: 260px) {
   .orange-card {
     display: none;
+  }
+  .eventListCard {
+    font-size: 2.2vw;
   }
 }
 
