--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -23,10 +23,7 @@ a:hover {
   padding-right: 0;
   border: none !important;
 }
-.makeStyles-margin-1{
-  margin: 8px;
-  padding-left: 22rem;
-}
+
 .weatherCard {
   max-width: 200px;
   height: 250px;
@@ -34,21 +31,24 @@ a:hover {
   color: white;
 
 }
+.searchBar{
+  justify-content: center;
+}
 .city{
   text-decoration: underline;
+  margin: 1rem 0;
 }
 .cityWeatherCards{
   width:400;
   height:300;
 }
 
-.card-title,
+.card-title
 h5 {
   margin-top: 2rem;
-  font-weight: 800;
-  font-size: 30px;
+   font-size: 30px;
   padding: 20px 8px 0px 8px;
-
+  font-weight: 400;
 }
 .card-text {
   color: #f8f0f0;
@@ -64,7 +64,7 @@ h5 {
   top: 2.5rem !important;
   right: 1rem !important;
   box-shadow: 20px 0 0 20px #f5efef !important;
-  margin: 2rem;
+  margin: 3rem;
 }
 .weatherIcons {
   height: 60px;
@@ -104,7 +104,7 @@ h5 {
       }     
       .makeStyles-margin-1{
         margin: 8px;
-        padding-left: 2rem;
+        padding-left: 4rem;
       }
       .weatherCard {
         max-width: 250vh;
