--- a/src/Main/Event/Event.css
+++ b/src/Main/Event/Event.css
@@ -1,60 +1,60 @@
 /* ¨¨ */
 /* 2nd container from top that displays image and 3 cards */
 .top-graphic-and-cards-container {
-  position: relative;
-  /* background-color: turquoise; */
-  height: 40vh;
-}
-.top-graphic-and-cards-lady-img {
-  position: absolute;
-  height: 90%;
-  margin-left: 3vw;
+  /* position: relative; */
+  height: 80vh;
 }
 .top-graphic-and-cards-container img {
   height: 100%;
-  margin: 10%;
 }
-.events-category-all-cards {
-  display: flex;
-  justify-content: flex-end;
-  height: 100%;
-  margin-right: 30px;
-  font-size: 2.2vw; /*responsive font-size*/
-  overflow-y: auto;
+
+.event-category {
+  margin: 0 1em;
 }
 
 .orange-card {
   background-color: orange;
-  color: white;
-  height: 80%;
-  width: 15vw;
-  margin-right: 20px;
-  text-align: center;
+  height: 15rem;
+  width: 12vw;
+  font-size: 1.5rem;
+  margin-right: 1em;
+  cursor: pointer;
 }
-
+.event-text {
+  height: 100% !important;
+  font-size: 1.25rem !important;
+}
 .orange-card p {
   transform: translateY(160%);
 }
-
-.BS-dropdown {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 13vw;
-  margin-top: -3vw;
+.link-event {
+  text-decoration: none !important;
 }
-
 /* bottom half */
 .BS-search {
   display: flex;
   justify-content: center;
+  margin-left: 18em;
+  margin-bottom: 3em;
+}
+.MuiInput-root {
+  width: 25em !important;
+}
+.input-img {
+  width: 20em !important;
+  margin-right: 10px;
 }
 
-.events {
-  /*whole container of events frontpage cards*/
+.eventForm {
+  margin-top: 0;
 }
-
+.eventBtn {
+  margin-bottom: 0;
+  font-style: normal;
+}
 .eventListCard {
   background-color: #f5ede3 !important;
+  font-size: 1.2em !important;
   overflow: hidden !important;
 }
 
@@ -67,8 +67,14 @@
   border-radius: 50% !important; /**/
   margin-top: 10% !important;
 }
-
-@media (max-width: 500px) {
+.title {
+  color: orangered;
+  padding: 0 1rem !important;
+}
+.event-single {
+  background-color: palegreen;
+}
+@media (max-width: 576px) {
   .orange-card {
     height: 40%;
     margin-top: 10vh;
@@ -80,6 +86,19 @@
     height: 150px;
     width: 150px;
     margin-top: 25%;
+  }
+  .event-text {
+    display: none;
+  }
+  .eventForm {
+    width: 20em;
+    padding: 0;
+  }
+  .BS-search {
+    margin: 0 0;
+  }
+  .MuiInput-root {
+    width: 15em !important;
   }
 }
 @media (max-width: 260px) {
