--- a/src/Main/Event/Event.css
+++ b/src/Main/Event/Event.css
@@ -37,9 +37,11 @@
   margin-left: 18em;
   margin-bottom: 3em;
 }
+
 .MuiInput-root {
   width: 25em !important;
 }
+
 .input-img {
   width: 20em !important;
   margin-right: 10px;
@@ -47,11 +49,14 @@
 
 .eventForm {
   margin-top: 0;
+  width: 35em;
 }
+
 .eventBtn {
   margin-bottom: 0;
   font-style: normal;
 }
+
 .eventListCard {
   background-color: #f5ede3 !important;
   font-size: 1.2em !important;
@@ -67,13 +72,16 @@
   border-radius: 50% !important; /**/
   margin-top: 10% !important;
 }
+
 .title {
   color: orangered;
   padding: 0 1rem !important;
 }
+
 .event-single {
   background-color: palegreen;
 }
+
 @media (max-width: 576px) {
   .orange-card {
     height: 40%;
