--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -10,7 +10,7 @@ a:hover {
   color: #f1e3d5;
 }
 
-.card {
+/* .card {
   position: relative;
   display: inline-block;
   max-width: 400px;
@@ -20,7 +20,7 @@ a:hover {
   padding-top: 0;
   padding-right: 0;
   border: none !important;
-}
+} */
 .weatherCard {
   max-width: 200px;
   height: 250px;
@@ -36,7 +36,7 @@ a:hover {
   height: 300;
 }
 
-.card-title h5 {
+/* .card-title h5 {
   margin-top: 2rem;
   font-size: 30px;
   padding: 20px 8px 0px 8px;
@@ -56,14 +56,16 @@ a:hover {
   right: 1rem !important;
   box-shadow: 20px 0 0 20px #f5efef !important;
   margin: 3rem;
-}
+} */
 .weatherIcons {
   height: 60px;
   width: 60px;
 }
-.input-group {
+
+/* .input-group {
   text-align: center;
-}
+} */
+
 #search-bar {
   margin-top: 2rem;
   width: 1000px;
@@ -85,13 +87,13 @@ a:hover {
     flex-direction: column;
     margin: 0;
   }
-  .card-body {
+  /* .card-body {
     max-width: 300vh !important;
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: center !important;
-  }
+  } */
   .makeStyles-margin-1 {
     margin: 8px;
     padding-left: 4rem;
@@ -104,10 +106,10 @@ a:hover {
     color: white;
     padding: 0;
   }
-
+  /* 
   .input-group {
     text-align: center;
-  }
+  } */
   #search-bar {
     margin-top: 2rem;
     width: 1000px;
