--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -1,5 +1,3 @@
-
-    
 .weatherCard card {
   flex: 1;
   background-color: "#93ACED";
@@ -29,24 +27,22 @@ a:hover {
   height: 250px;
   font-size: 20px;
   color: white;
-
 }
-.searchBar{
+.searchBar {
   justify-content: center;
 }
-.city{
+.city {
   text-decoration: underline;
   margin: 1rem 0;
 }
-.cityWeatherCards{
-  width:400;
-  height:300;
+.cityWeatherCards {
+  width: 400;
+  height: 300;
 }
 
-.card-title
-h5 {
+.card-title h5 {
   margin-top: 2rem;
-   font-size: 30px;
+  font-size: 30px;
   padding: 20px 8px 0px 8px;
   font-weight: 400;
 }
@@ -85,75 +81,72 @@ h5 {
 /* Mobile version */
 
 @media (max-width: 576px) {
-     
-      .beachContainer{
-        max-width: 100%!important;
-      }
-      .cityWeatherCards{
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
-        margin:0;
-      }
-      .card-body{
-        max-width: 300vh!important;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center!important;
-      }     
-      .makeStyles-margin-1{
-        margin: 8px;
-        padding-left: 4rem;
-      }
-      .weatherCard {
-        max-width: 250vh;
-        display: flex;
-        flex-direction: column;
-        font-size: 15px;
-        color: white;
-        padding: 0;
-      }
+  .beachContainer {
+    max-width: 100% !important;
+  }
+  .cityWeatherCards {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    margin: 0;
+  }
+  .card-body {
+    max-width: 300vh !important;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center !important;
+  }
+  .makeStyles-margin-1 {
+    margin: 8px;
+    padding-left: 4rem;
+  }
+  .weatherCard {
+    max-width: 250vh;
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+    color: white;
+    padding: 0;
+  }
 
-      .city{
-        text-decoration: underline;
-      }
-      .card-img-top {
-        position: relative !important;
-        border-radius: 50% !important;
-        max-width: 250px !important;
-        height: 250px !important;
-        top: 2.5rem !important;
-        left:1rem !important;
-        box-shadow: 20px 0 0 20px #f5efef !important;
-      }
-      .card-title,
-      h5 {
-        margin-top: 2rem;
-        font-size: 10px;
-      
-      }
-      .cityWeatherCards{
-        padding:1rem;
-      }
-      .card-text {
-        color: #f8f0f0;
-       margin-top: 1rem;
-        padding: 1rem;
-        text-align: center;
-      }
-      
-      .input-group {
-        text-align: center;
-      }
-      #search-bar {
-        margin-top: 2rem;
-        width: 1000px;
-        height: 3rem;
-        padding: 0 1rem;
-        font-size: initial;
-        padding-right: 2rem;
-        margin-left: 5rem;
-      }
- 
+  .city {
+    text-decoration: underline;
+  }
+  .card-img-top {
+    position: relative !important;
+    border-radius: 50% !important;
+    max-width: 250px !important;
+    height: 250px !important;
+    top: 2.5rem !important;
+    left: 1rem !important;
+    box-shadow: 20px 0 0 20px #f5efef !important;
+  }
+  .card-title,
+  h5 {
+    margin-top: 2rem;
+    font-size: 10px;
+  }
+  .cityWeatherCards {
+    padding: 1rem;
+  }
+  .card-text {
+    color: #f8f0f0;
+    margin-top: 1rem;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .input-group {
+    text-align: center;
+  }
+  #search-bar {
+    margin-top: 2rem;
+    width: 1000px;
+    height: 3rem;
+    padding: 0 1rem;
+    font-size: initial;
+    padding-right: 2rem;
+    margin-left: 5rem;
+  }
 }
