--- a/src/Main/Home/scrollContainer/scrollContainer.css
+++ b/src/Main/Home/scrollContainer/scrollContainer.css
@@ -97,7 +97,7 @@
     bottom: 0;
     left: 0;
   }
-  .horizontal-scroll__block .card-text {
+  .horizontal-scroll__block .textoncard {
     display: inline-block;
     position: absolute;
     top: 80%;
@@ -134,7 +134,7 @@
     height: 15rem;
     left: 1rem;
   }
-  .card-text {
+  .textoncard {
     font-size: 2.2em !important;
   }
 }
@@ -154,7 +154,7 @@
     height: 10rem;
     left: 1rem;
   }
-  .card-text {
+  .textoncard {
     font-size: 1.3em !important;
   }
 }
@@ -188,7 +188,7 @@
     bottom: 0;
     left: 0;
   }
-  .horizontal-scroll__block .card-text {
+  .horizontal-scroll__block .textoncard {
     position: relative; /* positioning relative to container*/
     left: 25%; /* ^ */
     top: 40%; /* ^ */
@@ -236,7 +236,7 @@
     background-size: cover;
     opacity: 0.9;
   }
-  .horizontal-scroll__block .card-text {
+  .horizontal-scroll__block .textoncard {
     position: relative; /* positioning relative to container*/
     left: 20%; /* ^ */
     top: 5%; /* ^ */
